GNOME Bugzilla – Bug 633746
”Random image” doesn't work with two images in a folder
Last modified: 2010-11-02 20:12:50 UTC
Reported in the Ubuntu bug tracker: https://bugs.launchpad.net/ubuntu/+source/eog/+bug/668863 “The random image functionality doesn't work when a folder contains only 2 images. The first image is always shown, the second never. That's not very random.”
Switched the random number generation from some ugly rand()-magic to GRandom. Workd better. commit 88407daf16b509dc33256ad11a8941a8eb4e3eb4 Author: Felix Riemann <> Date: Tue Nov 2 20:20:02 2010 +0100 Use GRandom as random value generator for random image function Seems to have a better distribution. At least works better with lower image counts. Fixes bug 633764. This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.