Use GRandom as random value generator for random image function

Seems to have a better distribution. At least works better with lower image counts.

Eom bug https://bugzilla.gnome.org/show_bug.cgi?id=633746
Based on eog commit 88407daf16b509dc33256ad11a8941a8eb4e3eb4
From Felix Riemann <friemann@gnome.org>